--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
 }
 
 body {
+    height: 100vh;
+    display: flex;
+    align-items: center;
     font-family: 'roboto', sans-serif;
     background-color: #f5f5f5;
     padding: 20px 0;
